# pytest-packagetree

./: README.md  hooks.py  pyproject.toml  pytest_packagetree.py  setup.py
pytest_packagetree/: plugin.py
